fix to post form when editing on mobile

--- a/app/output.css
+++ b/app/output.css
@@ -6920,6 +6920,10 @@ video {
     width: 83.333333%;
   }
 
+  .md\:w-full {
+    width: 100%;
+  }
+
   .md\:min-w-\[60\%\] {
     min-width: 60%;
   }
